fixing z-index for nav bug

--- a/css/style.css
+++ b/css/style.css
@@ -1003,6 +1003,7 @@ li {
     height: 100vh;
     position: fixed;
     top: 0;
+    z-index: -2000;
     opacity: 0;
     width: 0;
     transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -1015,7 +1016,7 @@ li {
     transform: translate(-50%, -50%);
     list-style: none;
     text-align: center;
-    width: 100;
+    width: 100%;
     overflow: hidden; }
   .navigation__item {
     margin: 1rem; }
